server/src/analysis/scopes/snapshots/janet_zed_server__analysis__scopes__tests__as_threading_binding.snap
---
source: server/src/analysis/scopes/tests.rs
assertion_line: 235
expression: (as-> 1 x (+ |x 1) (* x 2))
---
----- BINDING
(as-> 1 x (+ x 1) (* x 2))
        ▔    ↑
