server/src/analysis/scopes/snapshots/janet_zed_server__analysis__scopes__tests__dofile_argument_is_evaluated.snap
---
source: server/src/analysis/scopes/tests.rs
assertion_line: 160
expression: "(defn run [path] (dofile |path))"
---
----- BINDING
(defn run [path] (dofile path))
           ▔▔▔▔          ↑
