server/src/analysis/scopes/snapshots/janet_zed_server__analysis__scopes__tests__each_destructured_binding.snap
---
source: server/src/analysis/scopes/tests.rs
expression: "(each [k v] (pairs t) (put t |k v))"
---
----- BINDING
(each [k v] (pairs t) (put t k v))
       ▔                     ↑
