server/src/analysis/scopes/snapshots/janet_zed_server__analysis__scopes__tests__fn_with_parenthesized_parameters.snap
---
source: server/src/analysis/scopes/tests.rs
assertion_line: 240
expression: (fn (x) |x)
---
----- BINDING
(fn (x) x)
     ▔  ↑
