server/src/analysis/scopes/snapshots/janet_zed_server__analysis__scopes__tests__if_let_binding_in_the_then_branch.snap
---
source: server/src/analysis/scopes/tests.rs
expression: "(if-let [v 1] |v v)"
---
----- BINDING
(if-let [v 1] v v)
         ▔    ↑
