server/src/analysis/scopes/snapshots/janet_zed_server__analysis__scopes__tests__import_star_argument_is_evaluated.snap
---
source: server/src/analysis/scopes/tests.rs
assertion_line: 170
expression: "(defn run [module] (import* |module))"
---
----- BINDING
(defn run [module] (import* module))
           ▔▔▔▔▔▔           ↑
