server/src/analysis/scopes/snapshots/janet_zed_server__analysis__scopes__tests__inner_let_shadows_outer_let.snap
---
source: server/src/analysis/scopes/tests.rs
expression: "(let [x 1] (let [x 2] |x))"
---
----- BINDING
(let [x 1] (let [x 2] x))
                 ▔    ↑
