server/src/analysis/scopes/snapshots/janet_zed_server__analysis__scopes__tests__let_bindings_are_sequential.snap
---
source: server/src/analysis/scopes/tests.rs
expression: "(let [a 1 b |a] b)"
---
----- BINDING
(let [a 1 b a] b)
      ▔     ↑
