server/src/analysis/scopes/snapshots/janet_zed_server__analysis__scopes__tests__loop_let_modifier.snap
---
source: server/src/analysis/scopes/tests.rs
expression: "(loop [i :range [0 10] :let [j i]] (print |j))"
---
----- BINDING
(loop [i :range [0 10] :let [j i]] (print j))
                             ▔            ↑
